# lms-backend

./: .env  .gitignore  README.md  REQUIREMENT.md  env  main.py  prof changes.md  pyproject.toml  serve  serve.bat  serve.sh  start_server  start_server.bat  start_server.sh  update the create_database.md
app/: main.py
app/ai/: agent.py  agent_memory.py  database_agent.py
app/api/: admin.py  ai.py  ai_chat.py  auth.py  chatbot.py  courses.py  health.py  learning_paths.py  proficiency_levels.py  project_roles.py  role_skill_requirements.py  routes.py  skills.py  users.py  userupload.py
app/core/: __init__.py  config.py  database.py  db_check.py  logger.py
app/crud/: __init__.py  crud.py
app/models/: employee.py  models.py
app/schemas/: schemas.py
app/services/: developer_processing.py
app/temp/: main.py
app/temp/app/: __init__.py  main.py
app/temp/app/models/: __init__.py  employee.py
app/temp/app/routers/: __init__.py  employees.py
app/temp/app/services/: developer_processing.py
app/utils/: __init__.py  test.py  utils.py
scripts/: create_database.sql
static/: small.csv  small.xlsx
